# Generated by Django 3.2.24 on 2025-06-30 00:38

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Anuncio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(help_text='Nombre del anuncio', max_length=100, verbose_name='Nombre')),
                ('titulo', models.CharField(help_text='Título del anuncio', max_length=100, verbose_name='Título')),
                ('contenido', models.TextField(help_text='Contenido del anuncio', verbose_name='Contenido')),
                ('precio', models.FloatField(help_text='Precio del anuncio', verbose_name='Precio')),
            ],
            options={
                'verbose_name': 'Anuncio',
                'verbose_name_plural': 'Anuncios',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Campania',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(help_text='Nombre de la campaña', max_length=50, unique=True, verbose_name='Nombre')),
                ('fecha_inicio', models.DateTimeField(help_text='Fecha y hora de inicio de campaña', verbose_name='Fecha de Inicio')),
                ('fecha_fin', models.DateTimeField(blank=True, help_text='Fecha y hora de fin de campaña', null=True, verbose_name='Fecha de Fin')),
            ],
            options={
                'verbose_name': 'Campaña',
                'verbose_name_plural': 'Campañas',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Categoria',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(help_text='Nombre descriptivo', max_length=50, unique=True, verbose_name='Nombre')),
                ('descripcion', models.CharField(blank=True, help_text='Descripción de la categoría de anuncios', max_length=150, verbose_name='Descripción')),
            ],
            options={
                'verbose_name': 'Categoría',
                'verbose_name_plural': 'Categorías',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Cliente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(help_text='Nombre del cliente', max_length=50, verbose_name='Nombre')),
                ('apellido', models.CharField(help_text='Apellido del cliente', max_length=50, verbose_name='Apellido')),
                ('direccion_postal', models.CharField(blank=True, help_text='Dirección postal del cliente', max_length=100, verbose_name='Dirección Postal')),
                ('numero_telefono', models.CharField(blank=True, help_text='Número de teléfono del cliente', max_length=30, verbose_name='Número de Teléfono')),
                ('correo', models.EmailField(blank=True, help_text='Correo electrónico del cliente', max_length=100, verbose_name='Correo Electrónico')),
            ],
            options={
                'verbose_name': 'Cliente',
                'verbose_name_plural': 'Clientes',
                'ordering': ['apellido', 'nombre'],
            },
        ),
        migrations.CreateModel(
            name='TipoAnuncio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(help_text='Nombre descriptivo', max_length=50, unique=True, verbose_name='Nombre')),
                ('descripcion', models.CharField(blank=True, help_text='Descripción del tipo de anuncios', max_length=150, verbose_name='Descripción')),
            ],
            options={
                'verbose_name': 'Tipo de Anuncio',
                'verbose_name_plural': 'Tipos de Anuncios',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='TopicoPagina',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(help_text='Nombre descriptivo', max_length=50, unique=True, verbose_name='Nombre')),
                ('descripcion', models.CharField(blank=True, help_text='Descripción del tópico de página', max_length=150, verbose_name='Descripción')),
            ],
            options={
                'verbose_name': 'Tópico de Página',
                'verbose_name_plural': 'Tópicos de Páginas',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='PaginaWeb',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('url', models.URLField(help_text='URL de la página web', verbose_name='URL')),
                ('nombre', models.CharField(help_text='Nombre de la página web', max_length=100, verbose_name='Nombre')),
                ('topico', models.ForeignKey(help_text='Tópico de la página web', on_delete=django.db.models.deletion.PROTECT, related_name='paginas', to='agencia.topicopagina', verbose_name='Tópico')),
            ],
            options={
                'verbose_name': 'Página Web',
                'verbose_name_plural': 'Páginas Web',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='ContratacionAnuncio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_contratacion', models.DateTimeField(help_text='Fecha y hora de contratación del anuncio', verbose_name='Fecha de Contratación')),
                ('precio', models.FloatField(help_text='Precio de la contratación', verbose_name='Precio')),
                ('anuncio', models.ForeignKey(help_text='Anuncio contratado', on_delete=django.db.models.deletion.PROTECT, related_name='contrataciones', to='agencia.anuncio', verbose_name='Anuncio')),
                ('cliente', models.ForeignKey(help_text='Cliente que contrata el anuncio', on_delete=django.db.models.deletion.PROTECT, related_name='contrataciones', to='agencia.cliente', verbose_name='Cliente')),
            ],
            options={
                'verbose_name': 'Contratación de Anuncio',
                'verbose_name_plural': 'Contrataciones de Anuncios',
                'ordering': ['-fecha_contratacion'],
            },
        ),
        migrations.CreateModel(
            name='AparicionAnuncioPagina',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_inicio_aparicion', models.DateTimeField(help_text='Fecha y hora de inicio de aparición', verbose_name='Fecha de Inicio')),
                ('fecha_fin_aparicion', models.DateTimeField(blank=True, help_text='Fecha y hora de fin de aparición', null=True, verbose_name='Fecha de Fin')),
                ('anuncio', models.ForeignKey(help_text='Anuncio que aparece en la página', on_delete=django.db.models.deletion.PROTECT, related_name='apariciones', to='agencia.anuncio', verbose_name='Anuncio')),
                ('pagina_web', models.ForeignKey(help_text='Página web', on_delete=django.db.models.deletion.PROTECT, related_name='apariciones', to='agencia.paginaweb', verbose_name='Página Web')),
            ],
            options={
                'verbose_name': 'Aparición de Anuncio en Página',
                'verbose_name_plural': 'Apariciones de Anuncios en Páginas',
                'ordering': ['-fecha_inicio_aparicion'],
            },
        ),
        migrations.AddField(
            model_name='anuncio',
            name='campania',
            field=models.ForeignKey(help_text='Campaña donde aparece el anuncio', on_delete=django.db.models.deletion.PROTECT, related_name='anuncios', to='agencia.campania', verbose_name='Campaña'),
        ),
        migrations.AddField(
            model_name='anuncio',
            name='categoria',
            field=models.ForeignKey(help_text='Categoría del anuncio', on_delete=django.db.models.deletion.PROTECT, related_name='anuncios', to='agencia.categoria', verbose_name='Categoría'),
        ),
        migrations.AddField(
            model_name='anuncio',
            name='tipo',
            field=models.ForeignKey(help_text='Tipo de anuncio', on_delete=django.db.models.deletion.PROTECT, related_name='anuncios', to='agencia.tipoanuncio', verbose_name='Tipo'),
        ),
    ]
